--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "typescript": "^5.0.0",
     "vite": "^4.4.9"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "vercel": "latest"
+  }
 }
