--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
   "type": "module",
   "dependencies": {
     "mdsvex": "^0.11.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gemoji": "^8.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-github": "^12.0.0",
     "vercel": "latest"
   }
 }
